@@ -66,6 +66,7 @@ Version 0.2.9 (2011-05-??)
 - Improved Postfinance payment module with new authentication method (Ticket #235)
 - Fixed bug when products have no SKU
 - Fixed product rules bug with member limits (Ticket #409)
+- Fixed specialchars in image gallery and checkout steps (Ticket #426)
 
 Version 0.2.8 (2011-05-09)
 ------------------------------
